// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`names/SAVE_NAMES should handle the action 1`] = `
Object {
  "female": Array [],
  "male": Array [
    Object {
      "isFavorite": true,
      "name": "artur",
    },
  ],
}
`;

exports[`names/SAVE_NAMES should update a state retrieved from a storage 1`] = `
Object {
  "female": Array [],
  "male": Array [
    Object {
      "isFavorite": true,
      "name": "artur",
    },
    Object {
      "name": "alex",
    },
    Object {
      "name": "pierre",
    },
  ],
}
`;

exports[`should handle names/FAVSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "female": Array [],
  "male": Array [
    Object {
      "isFavorite": false,
      "name": "artur",
    },
  ],
}
`;

exports[`should handle names/LISTSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "female": Array [],
  "male": Array [
    Object {
      "isFavorite": false,
      "name": "artur",
    },
  ],
}
`;

exports[`should return the initial state 1`] = `
Object {
  "female": Array [],
  "male": Array [],
}
`;
